--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			var password = document.getElementById("password").value;
 			console.log(username);
 
-			if(username === "xyz" && password == "123") {
+			if(username === "xyz" && password === "123") {
 				window.location.replace("index.html");
 				return;
 			}
