--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			console.log(username);
 
 			if(username === "xyz" && password === "123") {
-				window.location.replace("index.html");
+				window.location.replace("mainpage.html");
 				return;
 			}
 			
